--- a/E_vacina/app/src/main/AndroidManifest.xml
+++ b/E_vacina/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.E_vacina">
-        <activity android:name=".ui.activity.ActivityHomepage"></activity>
-        <activity android:name=".ui.activity.Activity_InformacoesPessoais" />
-        <activity android:name=".ui.activity.Activity_Cadastro" />
-        <activity android:name=".ui.activity.Activity_login">
+        <activity android:name=".ui.visual.activity.ActivityHomepage"></activity>
+        <activity android:name=".ui.visual.activity.Activity_InformacoesPessoais" />
+        <activity android:name=".ui.visual.activity.Activity_Cadastro" />
+        <activity android:name=".ui.visual.activity.Activity_login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
