--- a/E_vacina/app/build.gradle
+++ b/E_vacina/app/build.gradle
@@ -34,8 +34,8 @@ android {
 dependencies {
     def room_version = "2.0.0"
 
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-runtime:2.2.5"
+    kapt  "androidx.room:room-compiler:2.2.5"
 
     def lifecycle_version = "2.0.0"
 
