Correção de logica e manisfet
Bug  permitia cadastro de nome menor que 3 caracteres e com dados em branco.
Manisfet sem permitir acesso a memoria do celular

Co-Authored-By: biancasofia <69814402+biancasofia@users.noreply.github.com>

--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -10,8 +10,9 @@
         android:label="E-Vacina"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Evacina4">
-        android:requestLegacyExternalStorage="true"
+        android:theme="@style/Theme.Evacina4"
+        android:requestLegacyExternalStorage="true">
+
         <activity android:name="com.example.Evacina.ui.acitivity.ActivityEnfermeiro"></activity>
         <activity android:name="com.example.Evacina.ui.acitivity.ActivityInformacoesPessoiasEdicao" />
         <activity android:name="com.example.Evacina.ui.acitivity.ActivityCadastroVacina" />
