--- a/App/app/build.gradle
+++ b/App/app/build.gradle
@@ -32,7 +32,8 @@ android {
 
 dependencies {
 
-
+    //noinspection GradleCompatible
+    implementation "com.android.support:support-compat:28.0.0"
 
     implementation 'com.google.firebase:firebase-auth:20.0.3'
     implementation platform('com.google.firebase:firebase-bom:26.7.0')
