--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Evacina4"
+        android:screenOrientation="portrait"
         android:requestLegacyExternalStorage="true">
 
         <activity android:name="com.example.Evacina.ui.acitivity.ActivityEnfermeiro"></activity>
